# template

./: README.md  pyproject.toml
src/template/: __init__.py
src/template/scripts/: train.py
tests/: test_dummy.py
