[project]
name = "template"
version = "0.1.0"
description = "A general purpose machine learning project template."
readme = "README.md"
authors = [
    { name = "Will Rice", email = "wrice20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.isort]
known-first-party = ["template"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N", "B"]
ignore = ["D107"]
exclude = [".venv"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
exclude = [".venv"]

[project.scripts]
train = "template.scripts.train:main"
